Seller Ergänzt mit eigenen Eigenschaften und Terminals korrigiert